<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/btndeletebg"
    android:layout_height="200dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/nearWhite">

        <ImageView
            android:id="@+id/imageView_alert_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_alert_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

        <TextView
            android:id="@+id/textView_alert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="26dp"
            android:text="@string/deletealert"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_alert_description"
            app:layout_constraintStart_toEndOf="@+id/imageView_alert_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/textView_alert_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/alertdes"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_alert_deleting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btndeletebg"
            android:padding="12dp"
            android:text="@string/i_am_sure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_alert_description" />

        <Button
            android:id="@+id/button_alert_notdelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/notdeletebg"
            android:padding="12dp"
            android:text="@string/no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_alert_deleting"
            app:layout_constraintTop_toBottomOf="@+id/textView_alert_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>